# style-transfer

./: .gitignore  README.md  docker-compose.yml  download_models.sh
backend/: Dockerfile  download_models.sh  inference.py  main.py  model_runner.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  main.py  pyproject.toml
