[tool.poetry]
name = "style-transfer_backend"
version = "0.1.0"
description = "Sample Streamlit app backend."
authors = ["Alan Gardner"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
numpy = "^1.22.2"
Pillow = "^9.0.1"
python-multipart = "^0.0.5"
uvicorn = "^0.17.4"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
