[tool.poetry]
name = "style-transfer_frontend"
version = "0.1.0"
description = "Sample Streamlit app frontend."
authors = ["Alan Gardner"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
